# ShopFairResearch

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: weekly_crawl.yml
data/snapshots/: 2026-07-10.manifest.json  2026-07-12.manifest.json  2026-07-19.manifest.json
docs/: ARCHITECTURE.md  DATA_DICTIONARY.md  METHODOLOGY.html  METHODOLOGY.md  index.html  weekly-report.html
docs/data/: weekly-summary.json
scripts/: check.py  workflow_summary.py
shopfair_research/: __init__.py  analysis.py  models.py  parsers.py  pipeline.py  report.py  sources.py  storage.py
tests/: __init__.py  test_analysis.py  test_parsers.py  test_storage_pipeline.py
